- `dig-now`: properly generate ice boulders when digging through ice walls
- `gui/teleport`: now properly handles teleporting units that are currently falling or being flung
- `unload`: fix recent regression where `unload` would immediately `reload` the target
- ``Buildings`` module: do not crash if a ``map_block`` unexpectedly contains an item that is not on the master item vector

## Misc Improvements
- `spectate`: show dwarves' activities (like prayer)

## Documentation

## API
- ``Military`` module: added ``addToSquad`` function
- ``Units::teleport``: projectile information is now cleared for teleported units

## Lua
- ``dfhack.military.addToSquad``: expose Military API function

## Removed

# 51.10-r1

## Misc Improvements
- Compatibility with DF 51.10

# 51.09-r1

## New Features
- `gui/journal`: Ctrl-j hotkey to launch `gui/journal` now works in adventure mode!

## Fixes
- Fix processing error in the overlay that displays unit preferences in the baron selection list

## API
- ``Filesystem`` module: rewritten to use C++ standard library components, for better portability

# 51.08-r1

## Misc Improvements
- Compatibility update for DF 51.08

# 51.07-r1

## New Features
- `spectate`: can now specify number of seconds (in real time) before switching to follow a new unit
- `spectate`: new "cinematic-action" mode that dynamically speeds up perspective switches based on intensity of conflict
- `spectate`: new global keybinding for toggling spectate mode: Ctrl-Shift-S
- `spectate`: new overlay panel that allows you to cycle through following next/previous units (regardless of whether spectate mode is enabled)
- `gui/sitemap`: is now the official "go to" tool. new global hotkey for fort and adventure mode: Ctrl-G

## Fixes
- Windows console: fix possible hang if the console returns a too-small window width (for any reason)
- `createitem`: produced items will now end up at the look cursor position (if it is active)